# victoria

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
data/: engine_setting.toml  player_setting.toml
examples/font_info/: main.rs
examples/glut/: main.rs
examples/hello/: main.rs
src/: main.rs  settings.rs
src/core/: draw_shader.wgsl  game_time.rs  graphics.rs  mod.rs  tables.rs  user_input.rs
src/core/font_manager/: draw_shader.wgsl  font_data.rs  font_graphics.rs  font_info_saving.rs  font_manager_builder.rs  font_outline.rs  mod.rs  string_data.rs
src/core/gui_manager/: mod.rs  text.rs
src/core/resources/: mod.rs
src/settings/: mod.rs  window_setting.rs
src/utils/: mod.rs
