[package]
name = "neogame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*"
bytemuck = "*"
wgpu = "*"
pollster = "*"
env_logger = "*"
serde = {version = "*",features = ["derive"]}
toml = "*"
ttf-parser = "*"
