[package]
name = "gputext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
winit = "*"
bytemuck = {version = "*", features = ["derive"]}
wgpu = "*"
pollster = "*"
env_logger = "*"
serde = {version = "*", features = ["derive"]}
toml = "*"
owned_ttf_parser = "*"
bincode = "*"
